--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
     <input type="password">
     <button type="submit">Acceso google</button>
 </div>
-    <script src="app.js"></script>
+    <script type="module" src="/assets/js/auth.js"></script>
 </body>
 </html>
