--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,12 +17,17 @@
         <input id="email2" type="email" placeholder="Ingresa tu email"> 
         <input id="password2" type="password" placeholder="Ingresa tu contraseña">
         <button id="sign-in" type="submit">Inicia sesión</button>
+        
     </div>
+  <button id="sign-out" type="submit">Cerrar sesión</button>
+
 <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-firestore.js"></script>
-<script type="module" src="/assets/js/auth.js"></script>
-<script src="app.js"></script>
+<script type="module" src="./assets/js/auth.js"></script>
+<script type="module" src="app.js"></script>
+
+
 </body>
 </html>
