--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Testing NM </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
  
 </head>
 <body>
@@ -46,12 +46,11 @@
     
 
 
-           <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-database.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-firestore.js"></script>
-<script type="module" src="/assets/js/auth.js"></script>
-<script src="app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-firestore.js"></script>
+  <script type="module" src="app.js"></script>
 
 
 </body>
