--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Testing NM </title>
+    <title>NoMoreCommunity</title>
     <link rel="stylesheet" href="./assets/css/style.css">
  
 </head>
 <body>
- 
+    
    <!--  <div class="first-screen">
     
             <input class="form" type="text" id="email2" name="email" placeholder="Ingresa tu correo">
