--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
   
-    <div id="root"></div>
+    <div id="root">
+      
+    </div>
 
   <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
