--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,19 @@
 
 </head>
 <body>
-  
+  <header>
+    <div class="header-container">
+      <h1>NoMore!</h1>
+    </div>
+  </header>
     <div id="root">
       
     </div>
+  <footer>
+    <div class="footer-container">
+      <p>NoMore! Powered by NBD</p>
+    </div>
+  </footer>
 
     <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
