--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,12 @@
 
     <div id="root">
 
+    </div>
 
-
-
-        <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
-        <script type="module" src="./app.js"></script>
-        <script src="https://kit.fontawesome.com/7028123bad.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
+    <script type="module" src="./app.js"></script>
+    <script src="https://kit.fontawesome.com/7028123bad.js"></script>
 
 </body>
 
